// Vitest Snapshot v1

exports[`plugins/output > should allow to use filename.js to modify filename 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/foo.js",
    "filename": "static/js/foo.js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/builder/webpack-builder/dist",
    "publicPath": "/",
  },
}
`;

exports[`plugins/output > should set output correctly 1`] = `
{
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/packages/builder/webpack-builder/dist",
    "publicPath": "/",
  },
}
`;
